<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:padding="20dp"
    tools:context=".ActMain" >

   <LinearLayout
        android:id="@+id/pnlTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_start" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_stop" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/pnlTop2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_explore" />
        
         <!--  <Button
            android:id="@+id/btnSearchSer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_search_ser" />-->
                
    </LinearLayout>
    
        <LinearLayout
        android:id="@+id/pnlTop3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnLoc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_loc" />
        
         <!--  <Button
            android:id="@+id/btnSearchSer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_search_ser" />-->
                
    </LinearLayout>

    <ListView
        android:id="@+id/debug"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:listitem="@android:layout/simple_list_item_1" >

    </ListView>

</TableLayout>